--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 
     <!-- configure the versions you want to use here -->
     <fabric8.version>3.0.11.fuse-720027-redhat-00001</fabric8.version>
-    <spring-boot.version>1.5.4.RELEASE</spring-boot.version>
+    <spring-boot.version>7.7.0.fuse-sb2-770010-redhat-00001</spring-boot.version>
 
     <!-- Maven plugin versions -->
     <fabric8.maven.plugin.version>3.5.42</fabric8.maven.plugin.version>
